<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".SignInActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/sign_in_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/back" />

    <RelativeLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/email_layout_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/email_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:src="@drawable/email"
                app:tint="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout_sign_in"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/pass_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/pass_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:src="@drawable/password"
                app:tint="@color/black" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/show_password_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout_sign_in"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/show_password" />

        <RelativeLayout
            android:id="@+id/sign_in_layout_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_password_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:backgroundTint="@color/black">

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/sign_in_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/sign_in_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:src="@drawable/in"
                app:tint="@color/white" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="Don't have an account? Sign up Here!"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_below="@+id/create_account"
        android:layout_centerHorizontal="true"
        android:text="Forgot password?"
        android:textColor="@color/black"/>

</RelativeLayout>